--- a/FundooNotes/appsettings.json
+++ b/FundooNotes/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Strings": "Data Source=DESKTOP-2CM9D8H\\MSSQLSERVER01;Initial Catalog=FunduNote;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  }
 }
